--- a/PaaS/Docs/SDK文档/本地录制文档.md
+++ b/PaaS/Docs/SDK文档/本地录制文档.md
@@ -101,7 +101,7 @@ bool TICLocalRecorderImpl::startService(const std::string& path) {
 
 ``` json
 //示例
-{"AppProc":"QQMusic.exe", "Wnd": 0, "DstPath":"E:\\test.flv", "x":0, "y":10, "Width":100,"Height": 100}
+{"AppProc":"QQMusic.exe", "ClassId":0, "Wnd": 0, "DstPath":"E:\\test.flv", "x":0, "y":10, "Width":100,"Height": 100}
 ``` 
 
 ## 暂停和恢复录制 
@@ -130,6 +130,48 @@ bool TICLocalRecorderImpl::startService(const std::string& path) {
 - 参数：无
 
 >说明:在停止录制后，录制分片文件上传到腾讯云还需要点时间，这个时间长度受网络状态影响；
+
+#### 开始推流
+如果不使用本地录制和上传，可以使用直接推流到后台
+- 协议：**http://127.0.0.1:37604/localrecord/v1/StartPush**
+- 方法：`POST`
+- Content-Type：`application/json`
+- 参数：
+
+| 参数 | 类型 | 含义 |备注 |
+|-----|-----|-----|-----|
+| AppProc | string | 被录制程序进程名，如QQMusic.exe |选填，如果用户业务进程只一个，如果有多进程，请填窗口句柄wnd |
+| Wnd | int |  被录制的程序窗口句柄 |选填，在AppProc和Wnd中必须填一个参数 |
+| PushURL | string | 推流地址 |必填 |
+| x | int | 录制区域顶点x位置 | 选填，默认为0|
+| y | int | 录制区域顶点y位置 |选填，默认为0 |
+| Width | int | 录制区域宽度 |选填，默认为0, 表示整个窗口的宽度 |
+| Height | int | 录制区域高度 |选填，默认为0，表示整个窗口的高度 |
+| VideoFps | int | 视频采集帧率 |选填，默认 15 |
+| EnableAudio | bool | 开启音频 |选填，默认值true |
+| ClassId | int | 课堂号 | 必填，用于录制资源和课堂关联 |
+
+``` json
+//示例
+{"AppProc":"QQMusic.exe", "Wnd": 0, "PushURL":"http://xxx.yyy", "x":0, "y":10, "Width":100,"Height": 100}
+``` 
+>说明:推流和本地录制不支持同时进行；
+
+#### 结束推流
+在课堂结束或者需要停止录制的时候，您可以使用**停止录制**结束当前录制过程。
+- 协议：**http://127.0.0.1:37604/localrecord/v1/StopPush**
+- 方法：`POST`
+- Content-Type：`application/json`
+- 参数：无
+
+>说明:在停止录制后，录制分片文件上传到腾讯云还需要点时间，这个时间长度受网络状态影响；
+
+
+#### 退出录制服务: (Exit)
+- 协议：**http://127.0.0.1:37604/localrecord/v1/Exit**
+- 方法：`POST`
+- Content-Type：`application/json`
+- 参数：无
 
 ## 如何获取录制过程中的信息
 在录制过程中，如果您需要获取本地录制信息，可以通过查询来获取。
@@ -234,7 +276,7 @@ content中所带字段，格式如下：
 ```
 
 #### 通过查询方式获取录制视频列表
-- 请求URL：`https://iclass.api.qcloud.com/paas/v1/localrecord?sdkappid=xxxxx&identifier=xxxx&usersig=xxxx&random=xxx&contenttype=json`
+- 请求URL：`https://yun.tim.qq.com/v4/ilvb_edu/local_record?sdkappid=xxxxx&identifier=xxxx&usersig=xxxx&random=xxx&contenttype=json`
 - 接口方法：`POST`
 - Content-Type：`application/json`
 
@@ -243,9 +285,10 @@ content中所带字段，格式如下：
 
 | 参数名 | 类型 | 描述 | 是否必填 | 默认值 |
 | :------ | :--- | :---- | :--------: | :-----: |
-| class_id | int | 课堂 ID | 否 | 0
-| user_id | string | 录制用户id | 否 | 0
-| task_id | string | 录制任务id，本地录制拼接成功返回给客户端的id | 否 | 0
+| Action | string | 课堂 ID | 是 | "QueryRecordInfo"
+| RoomId | int | 录制用户id | 否 | 0
+| UserId | string | 录制任务id，本地录制拼接成功返回给客户端的id | 否 | 0
+| TaskId | string | 录制任务id，本地录制拼接成功返回给客户端的id | 否 | 0
 | Index | int | 分页拉取时，页面起始数据位置 | 是| 0
 | size | int | 分页拉取时，页面数据个数 | 是 | 0
 | SpliceTimeDesc | bool | 拉取分页时按后台生成视频时间进行降序  | 否 | false
