--- a/SaaS/开通指南.md
+++ b/SaaS/开通指南.md
@@ -29,8 +29,8 @@
 
 - `SDKAppID`是您在**实时音视频**中**创建应用**后得到的应用唯一标识。
 - `账号ID`为腾讯云账号唯一标识，在腾讯云官网注册登录后可从 [账号中心](https://console.cloud.tencent.com/developer) 查看。
-- 申请成功后，我们将为您开通互动课堂能力，包含除**云端课后录制**以外的**互动白板**、**PPT 动画转码**、**云端实时录制**功能。如果申请了`SaaS`服务，我们还会为您开通互动课堂`SaaS`组件。
-- 试用有效期为15天，为不影响您的正式业务，请于有效期内申请正式服务。
+- 申请成功后，我们将为您开通互动课堂能力，包含除**云端课后录制**以外的**互动白板**、**PPT 转码**、**云端实时录制**功能。如果申请了`SaaS`服务，我们还会为您开通互动课堂`SaaS`组件。
+- 注意 目前Saas服务属于体验试用阶段。
 
 
 
