补充web端相关文档

--- a/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
+++ b/PaaS/Docs/SDK文档/Web/互动课堂接入文档.md
@@ -4,17 +4,27 @@
 
 >! tic2.4.0 版本正式接入 TRTC Web SDK 4.x 的版本，TRTC Web SDK 4.x 版本将不再发布 TRTC Web SDK 的 cdn，请您自行参考 [实时音视频文档加载 TRTC Web SDK](https://cloud.tencent.com/document/product/647/16863)。
 
+>! tic2.5.0 版本正式接入 TIM-JS-SDK 2.x 的版本，TIM-JS-SDK 2.x 版本将不再发布 TIM-JS-SDK 的 cdn，请您自行参考 [即时通信 IM 文档加载 TIM-JS-SDK](https://cloud.tencent.com/document/product/269/37413)。
+
+
 ```
 <!-- axios SDK -->
 <script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/axios/axios.min.js"></script>
 <!-- WebIM SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/webim/webim.min.js"></script>
+<script src="本地im-sdk或者使用npm包"></script>
 <!-- COS SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/thirdpart/cos/5.1.0/cos.min.js"></script>
+<script src="本地cos-sdk或者使用npm包"></script>
 <!-- 白板SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.4.1/TEduBoard.min.js"></script>
+<script src="https://tic-res-1259648581.file.myqcloud.com/board/2.4.6/TEduBoard.min.js"></script>
 <!-- TIC SDK -->
-<script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.4.2/TIC.min.js"></script>
+<script src="https://tic-res-1259648581.file.myqcloud.com/tic/2.5.0/TIC.min.js"></script>
+```
+
+```
+// IM Web SDK
+npm install tim-js-sdk --save
+// 发送图片、文件等消息需要的 COS SDK
+npm install cos-js-sdk-v5 --save
 ```
 
 >?其中 TIC.min.js 可根据开源源码自行编译。
